added relative path for third image

--- a/bithub_blocks_bills.html
+++ b/bithub_blocks_bills.html
@@ -11,9 +11,9 @@
     <div class="container">
         <h1>GitHub Blocks</h1>
         <div class="row one">
-            <img src="/Users/Tyler.Bills@mheducation.com/Desktop/Coding Dojo/CSS/GitHub Blocks/GitHubBlocks/images/droctocat.png" class="octocat">
+            <img src="images/droctocat.png" class="octocat">
             <img src="images/spidertocat.png" class="octocat">
-            <img src="/Users/Tyler.Bills@mheducation.com/Desktop/Coding Dojo/CSS/GitHub Blocks/images/ironcat.jpeg" class="octocat">
+            <img src="images/ironcat.jpeg" class="octocat">
         </div>
         <div class="row two">
             <img src="/Users/Tyler.Bills@mheducation.com/Desktop/Coding Dojo/CSS/GitHub Blocks/images/justicetocat.jpeg" class="octocat">
