finalized all image updates

--- a/bithub_blocks_bills.html
+++ b/bithub_blocks_bills.html
@@ -16,13 +16,13 @@
             <img src="images/ironcat.jpeg" class="octocat">
         </div>
         <div class="row two">
-            <img src="/Users/Tyler.Bills@mheducation.com/Desktop/Coding Dojo/CSS/GitHub Blocks/images/justicetocat.jpeg" class="octocat">
-            <img src= "/Users/Tyler.Bills@mheducation.com/Desktop/Coding Dojo/CSS/GitHub Blocks/images/baracktocat.jpeg" class="octocat">
+            <img src="images/justicetocat.jpeg" class="octocat">
+            <img src= "images/baracktocat.jpeg" class="octocat">
         </div>
         <div class="row three">
-            <img src="/Users/Tyler.Bills@mheducation.com/Desktop/Coding Dojo/CSS/GitHub Blocks/images/octobiwan.jpeg" class="octocat">
-            <img src="/Users/Tyler.Bills@mheducation.com/Desktop/Coding Dojo/CSS/GitHub Blocks/images/trekkie.png" class="octocat">
-            <img src="/Users/Tyler.Bills@mheducation.com/Desktop/Coding Dojo/CSS/GitHub Blocks/images/dunetocat.png" class="octocat">
+            <img src="images/octobiwan.jpeg" class="octocat">
+            <img src="images/trekkie.png" class="octocat">
+            <img src="images/dunetocat.png" class="octocat">
         </div>
         <p>Images from <a href= "https://octodex.github.com/">GitHub Octodex</a</p>
     </div>
