Added alt text for images

--- a/bithub_blocks_bills.html
+++ b/bithub_blocks_bills.html
@@ -11,18 +11,18 @@
     <div class="container">
         <h1>GitHub Blocks</h1>
         <div class="row one">
-            <img src="images/droctocat.png" class="octocat">
-            <img src="images/spidertocat.png" class="octocat">
-            <img src="images/ironcat.jpeg" class="octocat">
+            <img src="images/droctocat.png" class="octocat" alt="DocOc">
+            <img src="images/spidertocat.png" class="octocat" alt="SpiderMan">
+            <img src="images/ironcat.jpeg" class="octocat" alt="IronMan">
         </div>
         <div class="row two">
-            <img src="images/justicetocat.jpeg" class="octocat">
-            <img src= "images/baracktocat.jpeg" class="octocat">
+            <img src="images/justicetocat.jpeg" class="octocat" alt="Justice">
+            <img src= "images/baracktocat.jpeg" class="octocat" alt="Omaba">
         </div>
         <div class="row three">
-            <img src="images/octobiwan.jpeg" class="octocat">
-            <img src="images/trekkie.png" class="octocat">
-            <img src="images/dunetocat.png" class="octocat">
+            <img src="images/octobiwan.jpeg" class="octocat" alt="Obiwan">
+            <img src="images/trekkie.png" class="octocat" alt="StarTrek">
+            <img src="images/dunetocat.png" class="octocat" alt="Dune">
         </div>
         <p>Images from <a href= "https://octodex.github.com/">GitHub Octodex</a</p>
     </div>
