--- a/bithub_blocks_bills.html
+++ b/bithub_blocks_bills.html
@@ -17,7 +17,7 @@
         </div>
         <div class="row two">
             <img src="images/justicetocat.jpeg" class="octocat" alt="Justice">
-            <img src= "images/baracktocat.jpeg" class="octocat" alt="Omaba">
+            <img src= "images/baracktocat.jpeg" class="octocat" alt="Obama">
         </div>
         <div class="row three">
             <img src="images/octobiwan.jpeg" class="octocat" alt="Obiwan">
